--- a/src/App.css
+++ b/src/App.css
@@ -134,3 +134,9 @@ body {
   transition: all 0.5s ease-in;
   font-size: 12px;
 }
+
+.fullscreen {
+  background-color: transparent;
+  border: none;
+  color: #242121;
+}
