--- a/src/App.css
+++ b/src/App.css
@@ -32,3 +32,15 @@ body {
   overflow: hidden;
   margin: 0;
 }
+
+.controls {
+  position: absolute;
+  bottom: 0;
+  right: 30px;
+  width: 75px;
+  display: flex;
+  z-index: 3;
+  justify-content: space-between;
+  font-size: 30px;
+  color: gray;
+}
