--- a/src/components/timonk/timonk.css
+++ b/src/components/timonk/timonk.css
@@ -4,24 +4,25 @@
   justify-content: center;
   height: 100vh;
   width: 100vw;
-  background: #d9d7dd;
+  /* background: #d9d7dd; */
+  background: #ffffff;
 }
 
 .body-timonk .clock {
   height: auto;
   width: auto;
   border-radius: 100%;
-  background: #ffffff;
+  /* background: #ffffff; */
   font-family: "Montserrat";
-  border: 5px solid white;
-  box-shadow: inset 2px 3px 8px 0 rgba(0, 0, 0, 0.1);
+  /* border: 5px solid white; */
+  /* box-shadow: inset 2px 3px 8px 0 rgba(0, 0, 0, 0.1); */
 }
 
 .body-timonk .wrap {
   overflow: hidden;
   position: relative;
-  width: 350px;
-  height: 350px;
+  width: 300px;
+  height: 300px;
   border-radius: 100%;
 }
 
@@ -46,7 +47,7 @@
   position: absolute;
   height: 130px;
   width: 4px;
-  top: -38%;
+  top: -36%;
   left: 0;
   box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.4);
   transform: rotate(90deg);
@@ -57,7 +58,7 @@
   height: 90px;
   width: 2px;
   margin: auto;
-  top: -26%;
+  top: -24%;
   left: 0;
   bottom: 0;
   right: 0;
@@ -70,7 +71,7 @@
 
 .body-timonk .dot {
   position: absolute;
-  top: 0;
+  top: 20px;
   left: 0;
   right: 0;
   bottom: 0;
