--- a/src/components/ramadhan/ramadhan.scss
+++ b/src/components/ramadhan/ramadhan.scss
@@ -2,12 +2,14 @@
   display: flex;
   justify-content: space-between;
   width: 100vw;
+  height: 100vh;
   padding: 10px;
   .time {
     display: flex;
     flex-direction: column;
-    flex: 1;
+    flex: 1.5;
     color: #fff;
+    justify-content: center;
     padding: 10px 18px 59px 49px;
     h1 {
       font-family: Poppins;
@@ -33,14 +35,22 @@
     }
   }
   .salah-times {
-    flex: 1;
+    flex: 1 1;
     padding-top: 20px;
+    display: flex;
+    flex-direction: column;
+    align-items: baseline;
+    justify-content: center;
+    background: #262727b3;
+    padding: 46px;
+    border-radius: 10px;
   }
-  background-image: url(./background.jpg);
+  background-image: url(./eid-mubarak-lantern-at-night-muslim-holiday-2024-01-29-21-46-26-utc.jpg);
   background-size: cover;
   .prayer-times {
     display: flex;
     margin-bottom: 1px;
+    justify-content: space-evenly;
   }
   .islamic-month {
     span:first-child {
