--- a/src/components/timonk/timonk.css
+++ b/src/components/timonk/timonk.css
@@ -5,7 +5,7 @@
   height: 100vh;
   width: 100vw;
   /* background: #d9d7dd; */
-  background: #ffffff;
+  background: #40487a;
 }
 
 .body-timonk .clock {
